ml-oom-safe/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: inference-server
  name: inference-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: inference-server
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: inference-server
    spec:
      containers:
      - image: inference-server
        name: inference-server
        imagePullPolicy: Never # This is important to pull image from local docker
        ports:
        - containerPort: 8088
          protocol: TCP
      restartPolicy: Always
