ml-oom-safe/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inference-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: web.local # Edit /etc/hosts by adding a line `127.0.0.1  web.local`
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: inference-server
            port:
              number: 8088
